--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -19,7 +19,7 @@ h2 {
     width: 100vw;
     max-width: 1920px;
     margin: auto;
-    margin-top: -100px;
+    margin-top: -120px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -955,6 +955,7 @@ h2 {
     flex-direction: column;
     align-items: center;
 }
+
 
 .fifthHomeBackground {
     width: 100%;
@@ -2029,15 +2030,15 @@ h2 {
     }
 
 
-}
+
 
 
 /*SECOND MOBILE SECTION*/
 
 
-.secondHomeContainer{
+/* .secondHomeContainer{
     display: none;
-}
+} */
 
 .secondHomeContainerMobile {
     background: #F0F0F0 ;
@@ -2183,4 +2184,101 @@ h2 {
     line-height: 20.446px;
     /* 127.785% */
     width: 200px;
+}
+
+
+    /* FIFTH MOBILE SECTION */
+
+    .fifthHomeContainer {
+        display: none;
+    }
+
+    .mobileFifthHomeContainer {
+        background-color: #000000;
+        display: flex;
+        width: 100%;
+        height: 853px;
+        position: relative;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .mobileFifthHomeBackground {
+        position: relative;
+        display: flex;
+        height: 853px;
+        background-repeat: no-repeat;
+        justify-content: center;
+        background: url(/public/fifthHomeBg.svg) no-repeat right top 0;
+    }
+
+
+    .mobileInnerFifthHomeContainer {
+        display: flex;
+        position: relative;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-around;
+        margin-left: 15px;
+    }
+
+    .mobileInnerFifthTop {
+        width: 226px;
+        height: 114px;
+        position: relative;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-evenly;
+        margin-top: -80px;
+    }
+
+    .mobileIcons {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        height: 114px;
+        justify-content: space-between;
+    }
+
+    .mobileBenefits {
+        position: relative;
+        display: flex;
+        height: 119px;
+        font: 500 15px 'DM Sans', normal;
+        line-height: 1.5px;
+        color: #C9C9C9;
+        flex-direction: column;
+    }
+
+
+    .mobileInnerFifthBottom {
+        width: 350px;
+        height: 276px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+
+
+    .mobileInnerFifthTitle {
+        color: var(--White, #FFF);
+        font: 500 24px 'gotham-medium', normal;
+        line-height: 36px;
+        display: flex;
+
+    }
+
+
+    .mobileInnerFifthText {
+        color: var(--White, #FFF);
+        font: 400 14px 'gotham-book', normal;
+        line-height: 24px;
+        display: flex;
+
+    }
+
+
 }
